# OffbrandCatan

./: .gitignore  clippath.py  database.py  gameboard.py  gameplay.py  gametypes.py  hexgrid.py  login.py  main.py  models.py  mutabletypes.py  requirements.txt  settings.py
catan_lib/: build.hxml  test.hxml
catan_lib/src/hexgrid/: HexCoordinates.hx  HexGrid.hx
catan_lib/test/: TestSuite.hx
catan_lib/test/hexgrid/: HexCoordinatesTest.hx
rust/: Cargo.toml  dev_server.py
rust/catan_lib/: Cargo.toml
rust/catan_lib/benches/: generate_bench.rs
rust/catan_lib/src/: configuration.rs  generation.rs  lib.rs  player.rs  types.rs
rust/catan_lib/src/configuration_defaults/seafarers/: generation.json  rules.json
rust/catan_lib/src/configuration_defaults/sheepland/: generation.json  rules.json
rust/catan_lib/src/configuration_defaults/vanilla/: generation.json  rules.json
rust/catan_lib/src/configuration_defaults/vanilla56/: generation.json
rust/catan_lib/tests/: configuration_test.rs  generation_tests.rs
rust/catan_webapp/: Cargo.toml  build.sh  index.html  main.js
rust/catan_webapp/src/: game_component.rs  grid_components.rs  lib.rs  main.rs
rust/catan_webapp/src/board_components/: corner_component.rs  edge_component.rs  mod.rs  tile_component.rs
rust/catan_webapp/src/game_setup/: map_editor.rs  mod.rs  phantom_tile.rs
rust/catan_webapp/src/grid_components/: corner_component.rs  edge_component.rs  tile_component.rs
rust/catan_webapp/static/: test.html
rust/hexgrid/: Cargo.toml
rust/hexgrid/src/: hex_coordinates.rs  lib.rs
rust/hexgrid/tests/: hex_coordinates_test.rs  hexgrid_test.rs
static/: game.css  index.html
static/css/: gameboard.css  gameplay.css  gamesetup.css  offscreen.css
static/js/: automaticboardlayout.js  gameboard.js  gamesetup.js  gamesetupdefaults.js  hexgrid.js
templates/: debug_template.html  game.html  gamesetup.html  headerjs.js  profile.html  signin.html  svgtemplate.html
