[package]
name = "catan_lib"
version = "0.1.0"
authors = ["Timmy <timjimski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexgrid = {path = "../hexgrid"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "*", features = ["wasm-bindgen"] }
rand = {version = "0.8", features = ["getrandom"] }