[package]
name = "catan_webapp"
version = "0.1.0"
authors = ["Timmy <timjimski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hexgrid = {path = "../hexgrid"}
catan_lib = {path = "../catan_lib"}
wasm-bindgen = "^0.2"
log = "0.4"
console_log = "0.1.2"
yew = { version = "0.14", features = ["web_sys"] }
console_error_panic_hook = "0.1"
serde_json = "1.0"
