[package]
name = "catan_webapp"
version = "0.1.0"
authors = ["Timothy Scott <timjimski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexgrid = {path = "../hexgrid"}
catan_lib = {path = "../catan_lib"}
wasm-bindgen = "0.2.74"
yew = "0.18"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1.6"
serde_json = "1.0"
getrandom = { version = "*", features = ["js"] }
rand = { version = "0.8.3", features = ["getrandom"] }
